# sing-box-for-desktop

./: .gitmodules  electron-builder.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  version.json
native/windows-share/: Cargo.toml  package.json
native/windows-share/src/: lib.rs
patches/: app-builder-lib@26.15.3.patch
scripts/: afterPack.cjs  artifactBuildCompleted.cjs  development.ts  generate.ts  icons.ts  package.ts  reproducibility.ts  sing-box.ts  test-installer-preflight.ps1  version.ts  windowsShare.ts
src/main/: appReports.ts  application.ts  applicationPaths.ts  bridge.ts  core.ts  daemon.ts  database.ts  development.ts  index.ts  installationLayout.ts  locale.ts  loginItem.ts  openConnectBrowser.ts  preferences.ts  profileEditorWindows.ts  profiles.ts  repair.ts  reports.ts  servers.ts  settings.ts  sharing.ts  terminalWindows.ts  titleBarOverlay.ts  tray.ts  trayMenu.ts  updates.ts  userDataSecurity.ts  worker.ts  x11Tray.ts
src/preload/: index.ts
src/renderer/src/: host.ts  main.tsx  transport.ts
src/shared/: ipc.ts  translations.ts
