[package]
name = "sing-box-windows-share"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
name = "windows_share"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "=3.10.5", default-features = false, features = ["dyn-symbols", "napi6"] }
napi-derive = "=3.5.10"
windows = { version = "=0.62.2", features = [
  "ApplicationModel_DataTransfer",
  "Foundation",
  "Storage",
  "Storage_Streams",
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_WinRT",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
windows-collections = "=0.3.2"

[build-dependencies]
napi-build = "=2.3.2"

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
